[package]
name = "skia-safe-winit-metal"
version = "0.0.0"
authors = ["Alex Koz. <a@koz.email>"]
edition = "2018"
publish = false


[dependencies]
euclid = "0.22"

# window, events:
winit = "0.24"
winit_input_helper = "0.9"
# raw-window-handle = "0.3"

# metal support:
metal = { version = "0.21", optional = true }
# to access raw metal ptrs:
# foreign-types = { version = "0.5", optional = true }
foreign-types = { version = "0.3", optional = true }
# for that NSAutoReleasePool to be able to free metal devices:
cocoa = { version = "0.24", optional = true }
objc = { version = "0.2.7", optional = true }




[dependencies.skia]
package = "skia-safe"
version = "0.37"
features = [
	# "textlayout"
]

[dependencies.skia-bindings]
version = "0.37"
features = [
	# "textlayout"
]

[features]
default = [
	"mtl",
]

mtl = [
	"skia/metal",
	"skia-bindings/metal",
	"metal",
	"foreign-types",
	"cocoa",
	"objc"
]

