[package]
name = "skia-safe-winit-metal"
version = "0.0.0"
authors = ["Alex Koz. <a@koz.email>"]
edition = "2018"
publish = false


[dependencies]
euclid = "0.22"

# window, events:
winit = "0.26.1"
winit_input_helper = "0.11.0"
# raw-window-handle = "0.3"

# metal suport:
core-graphics-types = "0.1"
metal = { version = "0.23.1", optional = true }
# to access raw metal ptrs (metal uses 0.3.2, 0.5.0 does isn't compatible):
foreign-types = { version = "0.3.2", optional = true }
# for that NSAutoReleasePool to be able to free metal devices:
cocoa = { version = "0.24", optional = true }
objc = { version = "0.2.7", optional = true }

[dependencies.skia]
package = "skia-safe"
version = "0.38"
features = [
	# "textlayout"
]

[features]
default = [
	"mtl",
]

mtl = [
	"skia/metal",
	"metal",
	"foreign-types",
	"cocoa",
	"objc"
]

